--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
+    "@reduxjs/toolkit": "^2.5.1",
     "appwrite": "^17.0.0",
     "framer-motion": "^12.1.0",
+    "nanoid": "^5.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
